canary-mesh-bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary-mesh-bookinfo
  labels:
    istio-discovery: enabled
    istio-injection: enabled
