canary-mesh-bookinfo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-mesh-bookinfo
  namespace: canary-mesh-bookinfo
spec:
  replicas: 4
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: productpage
  template:
    metadata:
      annotations:
        demo-bookinfo-revision: "bookinfo-baseline-stable"
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: productpage
        version: v1
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-productpage
      containers:
        - name: productpage
          image: quay.io/sail-dev/examples-bookinfo-productpage-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
          readinessProbe:
            httpGet:
              path: /productpage
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir: {}
  strategy:
    canary:
      stableService: canary-mesh-bookinfo-stable
      canaryService: canary-mesh-bookinfo-canary
      maxUnavailable: 0
      maxSurge: 1
      trafficRouting:
        istio:
          virtualService:
            name: canary-mesh-bookinfo
            routes:
              - primary
      steps:
        - setWeight: 10
        - analysis:
            templates:
              - templateName: canary-mesh-bookinfo-prometheus
        - setWeight: 25
        - analysis:
            templates:
              - templateName: canary-mesh-bookinfo-prometheus
        - setWeight: 50
        - analysis:
            templates:
              - templateName: canary-mesh-bookinfo-prometheus
        - setWeight: 75
        - analysis:
            templates:
              - templateName: canary-mesh-bookinfo-prometheus
        - setWeight: 100
        - analysis:
            templates:
              - templateName: canary-mesh-bookinfo-prometheus
        - pause: {}
