canary-mesh-bookinfo/blackbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-mesh-bookinfo-blackbox
  namespace: canary-mesh-bookinfo
  labels:
    app: canary-mesh-bookinfo-blackbox
spec:
  selector:
    app: canary-mesh-bookinfo-blackbox
  ports:
    - name: http
      port: 9115
      targetPort: http
