canary-mesh-bookinfo/ingress-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: canary-mesh-bookinfo
  labels:
    istio: ingressgateway
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: istio-ingressgateway
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      istio: ingressgateway
  template:
    metadata:
      annotations:
        inject.istio.io/templates: gateway
      labels:
        istio: ingressgateway
        app.kubernetes.io/component: canary-mesh-bookinfo-ingressgateway
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: istio-proxy
          image: auto
