canary-mesh-bookinfo/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-mesh-bookinfo-stable
  namespace: canary-mesh-bookinfo
  labels:
    app: productpage
spec:
  selector:
    app: productpage
  ports:
    - name: http
      port: 9080
      targetPort: http
      protocol: TCP
