canary-mesh-bookinfo/workloads.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-details-stable
  namespace: canary-mesh-bookinfo
  labels:
    app: details
    track: stable
spec:
  selector:
    app: details
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-details-stable
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: details
        version: v1
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-details
      containers:
        - name: details
          image: quay.io/sail-dev/examples-bookinfo-details-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-details-canary
  namespace: canary-mesh-bookinfo
  labels:
    app: details
    track: canary
spec:
  selector:
    app: details
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-details-canary
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: details
        version: v1
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-details
      containers:
        - name: details
          image: quay.io/sail-dev/examples-bookinfo-details-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-ratings-stable
  namespace: canary-mesh-bookinfo
  labels:
    app: ratings
    track: stable
spec:
  selector:
    app: ratings
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-ratings-stable
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: ratings
        version: v1
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
        - name: ratings
          image: quay.io/sail-dev/examples-bookinfo-ratings-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-ratings-canary
  namespace: canary-mesh-bookinfo
  labels:
    app: ratings
    track: canary
spec:
  selector:
    app: ratings
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-ratings-canary
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: ratings
        version: v1
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-ratings
      containers:
        - name: ratings
          image: quay.io/sail-dev/examples-bookinfo-ratings-v1:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-reviews-stable
  namespace: canary-mesh-bookinfo
  labels:
    app: reviews
    track: stable
spec:
  selector:
    app: reviews
    track: stable
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-reviews-stable
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      track: stable
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: reviews
        version: v2
        track: stable
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
        - name: reviews
          image: quay.io/sail-dev/examples-bookinfo-reviews-v2:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
      volumes:
        - name: tmp
          emptyDir: {}
        - name: wlp-output
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: bookinfo-reviews-canary
  namespace: canary-mesh-bookinfo
  labels:
    app: reviews
    track: canary
spec:
  selector:
    app: reviews
    track: canary
  ports:
    - name: http
      port: 9080
      targetPort: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookinfo-reviews-canary
  namespace: canary-mesh-bookinfo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      track: canary
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /stats/prometheus
        prometheus.io/port: "15090"
      labels:
        app: reviews
        version: v3
        track: canary
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: bookinfo-reviews
      containers:
        - name: reviews
          image: quay.io/sail-dev/examples-bookinfo-reviews-v3:1.20.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9080
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: wlp-output
              mountPath: /opt/ibm/wlp/output
      volumes:
        - name: tmp
          emptyDir: {}
        - name: wlp-output
          emptyDir: {}
