canary-mesh-bookinfo/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: canary-mesh-bookinfo
  namespace: canary-mesh-bookinfo
spec:
  to:
    kind: Service
    name: istio-ingressgateway
    weight: 100
  port:
    targetPort: http2
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
